src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
.virtual-list {
    height: 100%;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
    scroll-behavior: smooth; /* This is absolutely required on iOS, otherwise you get tons of visual issues */
}

.virtual-list::-webkit-scrollbar {
    display: none;
}

.virtual-list ul.virtual-container {
    list-style-type: none;
}

.virtual-list ul.virtual-container li.item.new {
    position: absolute;
    top: 20000px;
}

